Bug 351133 - Options>Feeds 'Choose Application...' button is cut off and scroll-bar appears. r=mconnor.
UltraBlame original commit: c30e5314fdcde9ceeb8d477dc3378ad52a57069e

--- a/browser/themes/gnomestripe/browser/preferences/preferences.css
+++ b/browser/themes/gnomestripe/browser/preferences/preferences.css
@@ -252,3 +252,8 @@ filefield[disabled="true"] .fileFieldIcon {
   -moz-margin-start: 6px !important; 
   font-weight: bold;
 }
+
+
+#chooseClientAppCell {
+  -moz-padding-end: 12px;
+}
